Revision history for JSON-Relaxed

0.094	2024-05-15

	- Further enhancements for pretty printing.
	- Treat numbers that do not yield themselves as strings (e.g. "1.0").
	- Handle booleans properly.
	- With prp, allow on and off as boolean values.
	- Optionally, use schema data to provide comments when encoding.

0.093	2024-05-09

	- Use line/column for diagnostics.
	- Add impied_outer_hash option.
	- Add prp option for near-prp syntax.
	- Add RRJSON pretty printing.

0.092	2024-05-06

	- Add strict and combined_keys options.
	- Doc updates and small fixes.

0.090	2024-05-04

	- Redesign/recode.
	- Rename from_json to decode_json and parse to decode.
	  Keep old names as aliases.
	- Throw exceptions in case of error (when using new api).
	- Improved error messages, with error location info.
	- All user documentation in JSON::Relaxed, error documentation in
	  JSON::Relaxed::ErrorCodes.
	- Add JSON::Relaxed::new as short for JSON::Relaxed;:Parser::new.
	- Make commas between array elements optional.
	- Disallow leading commas in a list (spec).
	- Allow backticks for string quotes (spec).
	- Improve detection of string join (ext).
	- Add test suite for regression tests.
	- Handle Unicode surrogates.
	- Handle extended escape sequences (ext).

0.062	2024-04-03

	- Add object oriented accessors to error codes.
	- Add options to from_json and RJSON::Relaxed::Parser->new.
	- Use Test::More instead of Test::Most, 
	- Remove t/test-lib.pm (not used and identical to t/lib.pm).
	- Remove t/lib.pm (not used).
	- Fix issue #2.
	- Fix escaped newlines not terminating // comments.

0.061	2024-03-14

	- Add \uXXXXX escapes in strings. (Issue #3)
	- Allow strings to be joined when separated with \ \n (ext).
	- Rename test.t to 01_test.t.
	- Add more tests.
	- Docs and layout changes.

0.060	2024-03-13

	- Import from CPAN, BackPAN, and reconstruct history.
	- Updated Changes. Removed history from POD.
	- Removed lib/JSON/Relaxed.pod, LICENSE and Build.PL.
	- Modernized Makefile.PL.