@@ -7,6 +7,7 @@ Revision history for JSON-Relaxed
 	- Handle booleans properly.
 	- With prp, allow on and off as boolean values.
 	- Optionally, use schema data to provide comments when encoding.
+	- Simplify combinations of options.
 
 0.093	2024-05-09
 
